// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnitForm /> by default matches with snapshot 1`] = `
<form
  className="sc-htoDjs kWBfyC"
  onSubmit={[Function]}
>
  <div
    className="sc-bdVaJa kzCucd"
  >
    <div
      className="k-Grid sc-dnqmqq ivyRST"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-bdVaJa eGDgJX"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor="donation-amount"
            onClick={[Function]}
          >
            Enter your amount
          </label>
        </div>
        <div
          className="sc-bdVaJa chkwVs"
        >
          <div
            className="sc-EHOje gSBcM"
          >
            <input
              autoComplete="off"
              className="sc-htpNat bKpJKj sc-bZQynM kiqCgY"
              defaultValue=""
              disabled={false}
              id="donation-amount"
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Your amount"
              type="number"
            />
            <span
              className="sc-gzVnrw kaMYGF"
              disabled={false}
            >
              €
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-dnqmqq ivyRST"
  >
    <button
      aria-label="To contribute"
      className="k-Button k-Button--helium k-Button--big sc-iwsKbI eTitdG"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      To contribute
    </button>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> with align prop matches with snapshot 1`] = `
<form
  className="sc-htoDjs kWBfyC"
  onSubmit={[Function]}
>
  <div
    className="sc-bdVaJa kzCucd"
  >
    <div
      className="k-Grid sc-dnqmqq ivyRST"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-bdVaJa eGDgJX"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor=""
            onClick={[Function]}
          >
            
          </label>
        </div>
        <div
          className="sc-bdVaJa chkwVs"
        >
          <div
            className="sc-EHOje gSBcM"
          >
            <input
              autoComplete="off"
              className="sc-htpNat bKpJKj sc-bZQynM kiqCgY"
              defaultValue=""
              disabled={false}
              id=""
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="number"
            />
            <span
              className="sc-gzVnrw kaMYGF"
              disabled={false}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-dnqmqq ivyRST"
  >
    <button
      aria-label=""
      className="k-Button k-Button--helium k-Button--big sc-iwsKbI eTitdG"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      
    </button>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> with disabled prop matches with snapshot 1`] = `
<form
  className="sc-htoDjs kWBfyC"
  onSubmit={[Function]}
>
  <div
    className="sc-bdVaJa kzCucd"
  >
    <div
      className="k-Grid sc-dnqmqq ivyRST"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-bdVaJa eGDgJX"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor=""
            onClick={[Function]}
          >
            
          </label>
        </div>
        <div
          className="sc-bdVaJa chkwVs"
        >
          <div
            className="sc-EHOje gSBcM"
          >
            <input
              autoComplete="off"
              className="sc-htpNat bKpJKj sc-bZQynM kiqCgY"
              defaultValue=""
              disabled={true}
              id=""
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="number"
            />
            <span
              className="sc-gzVnrw jwXdMM"
              disabled={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-dnqmqq ivyRST"
  >
    <button
      aria-label=""
      className="k-Button k-Button--helium k-Button--big sc-iwsKbI eTitdG"
      disabled={true}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      
    </button>
  </div>
</form>
`;

exports[`<TextInputWithUnitForm /> with error prop matches with snapshot 1`] = `
<form
  className="sc-htoDjs kWBfyC"
  onSubmit={[Function]}
>
  <div
    className="sc-bdVaJa gSHEXD"
  >
    <div
      className="k-Grid sc-dnqmqq ivyRST"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@xs k-Grid__col--5@m"
      >
        <div
          className="sc-bdVaJa eGDgJX"
        >
          <label
            className="k-Label k-Label--micro"
            htmlFor=""
            onClick={[Function]}
          >
            
          </label>
        </div>
        <div
          className="sc-bdVaJa CoxgX"
        >
          <div
            className="sc-EHOje gSBcM"
          >
            <input
              autoComplete="off"
              className="sc-htpNat ynqvX sc-bZQynM kiqCgY"
              defaultValue=""
              disabled={false}
              id=""
              name="text"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="number"
            />
            <span
              className="sc-gzVnrw gxSmpY"
              disabled={false}
            />
          </div>
        </div>
        <div
          className="sc-bdVaJa ggQxmM"
        >
          <span
            className="k-u-color-error k-u-size-micro k-u-weight-regular"
          >
            Error message…
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-Grid sc-dnqmqq ivyRST"
  >
    <button
      aria-label=""
      className="k-Button k-Button--helium k-Button--big sc-iwsKbI eTitdG"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="submit"
    >
      
    </button>
  </div>
</form>
`;
